cambiando nombres de controllers

--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -32,7 +32,7 @@
         </div>
         <div class="col">
           <h2>Register</h2>
-          <form action="/register" method="post">
+          <form action="/users" method="post">
             <label for="firstname"> Firstname </label>
             <input type="text" name="firstname" class="form-control" id="firstname" />
             <br /><br />
