--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>HOME</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio/Twitter</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container d-flex">
+    <div class="row d-flex flex-column justify-content-between" style="height:100vh;">
+      <div class="col">
+        <ul style="list-style:none">
+          <li><a style="text-decoration:none; color:black" href=""><img src="/img/logo.png" style="max-width: 50px;"
+                alt="logoTwitter"></a></li>
+          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Explorar</a></li>
+          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Notificaciones</a></li>
+          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Mensajes</a></li>
+          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Guardados</a></li>
+          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Listas</a></li>
+          <li><a style="text-decoration:none; color:black" href="">Perfil</a></li>
+          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Más opciones</a></li>
+          <li><a style="text-decoration:none; color:black" href="" class="btn btn-primary rounded">Twittear</a></li>
+        </ul>
+      </div>
+      <div class="col-1">
+        Usuario
+      </div>
+    </div>
+    <div class="row d-flex flex-column">
+      <div>
+        <h2>Inicio</h2>
+        <form action="">
+          <textarea name="tweet" id="tweet" cols="30" rows="10" placeholder="¿Qué está pasando?"></textarea>
+          <button type="submit" class="btn btn-primary"> Twittear</button>
+        </form>
+      </div>
+      <div>
+        aca irian los tw
+      </div>
+    </div>
+    <div class="row"></div>
+  </div>
+</body>
+
 </html>
