--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,41 +9,136 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
 </head>
+<script src="https://kit.fontawesome.com/85d4ade37a.js" crossorigin="anonymous"></script>
 
 <body>
-  <div class="container d-flex">
-    <div class="row d-flex flex-column justify-content-between" style="height:100vh;">
+  <div class="container d-flex mt-1">
+    <div class="row d-flex flex-column justify-content-between" style="height:100vh; width: 250px;">
       <div class="col">
         <ul style="list-style:none">
-          <li><a style="text-decoration:none; color:black" href=""><img src="/img/logo.png" style="max-width: 50px;"
-                alt="logoTwitter"></a></li>
-          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Explorar</a></li>
-          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Notificaciones</a></li>
-          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Mensajes</a></li>
-          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Guardados</a></li>
-          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Listas</a></li>
-          <li><a style="text-decoration:none; color:black" href="">Perfil</a></li>
-          <li><a style="text-decoration:none; color:black" href="/enConstruccion">Más opciones</a></li>
-          <li><a style="text-decoration:none; color:black" href="" class="btn btn-primary rounded">Twittear</a></li>
+          <li><a href=""><img src="/img/logo.png" class="mt-2 mb-4" style="max-width: 50px;" alt="logoTwitter"></a></li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="/enConstruccion">Explorar</a></li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="/enConstruccion">Notificaciones</a>
+          </li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="/enConstruccion">Mensajes</a></li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="/enConstruccion">Guardados</a></li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="/enConstruccion">Listas</a></li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="">Perfil</a></li>
+          <li class="my-2 fs-4"><a style="text-decoration:none; color:black" href="/enConstruccion">Más opciones</a>
+          </li>
+          <li class="my-4"><a style="text-decoration:none; color:black" href=""
+              class="btn btn-primary rounded-pill btn-lg">Twittear</a></li>
         </ul>
       </div>
       <div class="col-1">
         Usuario
       </div>
     </div>
-    <div class="row d-flex flex-column">
-      <div>
+    <div class="row d-flex flex-column" style="max-width: 600px;">
+      <div class="d-flex justify-content-between">
         <h2>Inicio</h2>
-        <form action="">
-          <textarea name="tweet" id="tweet" cols="30" rows="10" placeholder="¿Qué está pasando?"></textarea>
-          <button type="submit" class="btn btn-primary"> Twittear</button>
-        </form>
+        <svg viewBox="0 0 24 24" aria-hidden="true" class="mx-1" style="max-width: 20px;">
+          <g>
+            <path
+              d="M22.772 10.506l-5.618-2.192-2.16-6.5c-.102-.307-.39-.514-.712-.514s-.61.207-.712.513l-2.16 6.5-5.62 2.192c-.287.112-.477.39-.477.7s.19.585.478.698l5.62 2.192 2.16 6.5c.102.306.39.513.712.513s.61-.207.712-.513l2.16-6.5 5.62-2.192c.287-.112.477-.39.477-.7s-.19-.585-.478-.697zm-6.49 2.32c-.208.08-.37.25-.44.46l-1.56 4.695-1.56-4.693c-.07-.21-.23-.38-.438-.462l-4.155-1.62 4.154-1.622c.208-.08.37-.25.44-.462l1.56-4.693 1.56 4.694c.07.212.23.382.438.463l4.155 1.62-4.155 1.622zM6.663 3.812h-1.88V2.05c0-.414-.337-.75-.75-.75s-.75.336-.75.75v1.762H1.5c-.414 0-.75.336-.75.75s.336.75.75.75h1.782v1.762c0 .414.336.75.75.75s.75-.336.75-.75V5.312h1.88c.415 0 .75-.336.75-.75s-.335-.75-.75-.75zm2.535 15.622h-1.1v-1.016c0-.414-.335-.75-.75-.75s-.75.336-.75.75v1.016H5.57c-.414 0-.75.336-.75.75s.336.75.75.75H6.6v1.016c0 .414.335.75.75.75s.75-.336.75-.75v-1.016h1.098c.414 0 .75-.336.75-.75s-.336-.75-.75-.75z">
+            </path>
+          </g>
+        </svg>
       </div>
-      <div>
-        aca irian los tw
+
+      <div class="d-flex ">
+        <div><img src="/img/default.jpg" class="mx-1" style="max-width: 40px;" alt=""></div>
+        <div>
+          <div class="d-flex">
+            <a href="" class="mx-1" style="text-decoration:none; color:black">Nombre</a>
+            <a href="" style="text-decoration:none; color:rgb(112, 112, 112)">@username</a>
+            <p class="mx-1">2h</p>
+          </div>
+          <form action="/user/tweet/<%= user.id%>" method="post">
+            <textarea name="tweetContent" id="tweetContent" cols="50" rows="2"
+              placeholder="¿Qué está pasando?"></textarea>
+            <div class="d-flex justify-content-between mt-2">
+              <div class="d-flex justify-content-between align-items-center" style="width: 200px;">
+
+                <div class="d-flex align-items-center">
+                  <img src="/img/comment-regular.svg" class="me-1" style="height: 18px;" alt="coment">
+                  5
+                </div>
+                <div>
+                  <img src="/img/retweet-solid.svg" class="me-1" style="height: 18px;" alt="coment">
+                </div>
+                <div class="d-flex align-items-center">
+                  <img src="/img/heart-regular.svg" class="me-1" style="height: 18px;" alt="coment">
+                  5
+                </div>
+                <div>
+                  <img src="/img/arrow-up-from-bracket-solid.svg" class="me-1" style="height: 18px;" alt="coment">
+                </div>
+              </div>
+
+              <div><button type="submit" class="btn btn-primary rounded-pill "> Twittear</button></div>
+            </div>
+          </form>
+        </div>
+      </div>
+      <div class="d-flex">
+
+
+      </div>
+      <% for ( const tweet of tweets) {%>
+      <div class="bg-light py-1 border">
+        <div class="d-flex ">
+          <div><img src="/img/default.jpg" class="mx-1" style="max-width: 40px;" alt=""></div>
+          <div>
+            <div class="d-flex">
+              <a href="" class="mx-1" style="text-decoration:none; color:black"><%= tweet.author.firstname%>
+                <%= tweet.author.lastname%></a>
+              <a href="" style="text-decoration:none; color:rgb(112, 112, 112)">@<%= tweet.author.username%></a>
+              <p class="mx-1">- <%= formatDistanceToNow( tweet.createdAt,
+                {includeSeconds: true}
+              ) %> </p>
+            </div>
+            <div><%= tweet.text%></div>
+            <div class="d-flex justify-content-between mt-2">
+              <div class="d-flex align-items-center">
+                <img src="/img/comment-regular.svg" class="me-1" style="height: 18px;" alt="coment">
+                5
+              </div>
+              <div>
+                <img src="/img/retweet-solid.svg" class="me-1" style="height: 18px;" alt="coment">
+              </div>
+              <div class="d-flex align-items-center">
+                <img src="/img/heart-regular.svg" class="me-1" style="height: 18px;" alt="coment">
+                5
+              </div>
+              <div>
+                <img src="/img/arrow-up-from-bracket-solid.svg" class="me-1" style="height: 18px;" alt="coment">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <% } %>
+    </div>
+    <div class="row d-flex flex-column" style="height:100vh; width: 250px;">
+      <div class="mt-1">
+        <input type="" class="form-control bor" aria-describedby="passwordHelpBlock" placeholder="Buscar en Twitter"
+          style="background-color: rgb(216, 214, 214);">
+      </div>
+      <div class="d-flex flex-column mt-5 rounded"
+        style="background-color: rgb(216, 214, 214); width: 200px; margin: auto;">
+        <div class="py-4"> Tendencias para ti</div>
+
+        <div class="mb-2">
+          <div class="d-flex">
+            <div style="color: grey;">Deportes - Tendencia</div>
+            <div></div>
+          </div>
+          <div class="fw-bold">Uruguay</div>
+          <div style="color: grey;">2.637 Tweets</div>
+        </div>
       </div>
     </div>
-    <div class="row"></div>
   </div>
 </body>
 
