--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,7 +31,10 @@
         </ul>
       </div>
       <div class="col-1">
-        Usuario
+        <form action="/user/?_method=DELETE" method="post">
+          <button type="submit" class="btn btn-primary">Logout</button>
+        </form>
+
       </div>
     </div>
     <div class="row d-flex flex-column" style="max-width: 600px;">
