--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio/Twitter</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-  </head>
-  <script src="https://kit.fontawesome.com/85d4ade37a.js" crossorigin="anonymous"></script>
 
-  <body>
-    <div class="container d-flex mt-1">
-      <div
-        class="row d-flex flex-column justify-content-between"
-        style="height: 100vh; width: 250px"
-      >
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio/Twitter</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+</head>
+<script src="https://kit.fontawesome.com/85d4ade37a.js" crossorigin="anonymous"></script>
+
+<body>
+  <div class="container d-flex mt-1 justify-content-between">
+    <div class="row">
+
+      <div class="col-3 d-flex flex-column justify-content-between" style="height: 100vh;">
         <div class="col">
           <ul style="list-style: none">
             <li>
-              <a href=""
-                ><img
-                  src="/img/logo.png"
-                  class="mt-2 mb-4"
-                  style="max-width: 50px"
-                  alt="logoTwitter"
-              /></a>
+              <a href=""><img src="/img/logo.png" class="mt-2 mb-4" style="max-width: 50px" alt="logoTwitter" /></a>
             </li>
             <li class="my-2 fs-4">
               <a style="text-decoration: none; color: black" href="/enConstruccion">Explorar</a>
             </li>
             <li class="my-2 fs-4">
-              <a style="text-decoration: none; color: black" href="/enConstruccion"
-                >Notificaciones</a
-              >
+              <a style="text-decoration: none; color: black" href="/enConstruccion">Notificaciones</a>
             </li>
             <li class="my-2 fs-4">
               <a style="text-decoration: none; color: black" href="/enConstruccion">Mensajes</a>
@@ -49,18 +37,14 @@
               <a style="text-decoration: none; color: black" href="/enConstruccion">Listas</a>
             </li>
             <li class="my-2 fs-4">
-              <a style="text-decoration: none; color: black" href="">Perfil</a>
+              <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%> ">Perfil</a>
             </li>
             <li class="my-2 fs-4">
               <a style="text-decoration: none; color: black" href="/enConstruccion">Más opciones</a>
             </li>
             <li class="my-4">
-              <a
-                style="text-decoration: none; color: black"
-                href=""
-                class="btn btn-primary rounded-pill btn-lg"
-                >Twittear</a
-              >
+              <a style="text-decoration: none; color: black" href=""
+                class="btn btn-primary rounded-pill btn-lg">Twittear</a>
             </li>
           </ul>
         </div>
@@ -70,14 +54,14 @@
           </form>
         </div>
       </div>
-      <div class="row d-flex flex-column" style="max-width: 600px">
+      <div class="col-6 d-flex flex-column">
         <div class="d-flex justify-content-between">
           <h2>Inicio</h2>
           <svg viewBox="0 0 24 24" aria-hidden="true" class="mx-1" style="max-width: 20px">
             <g>
               <path
-                d="M22.772 10.506l-5.618-2.192-2.16-6.5c-.102-.307-.39-.514-.712-.514s-.61.207-.712.513l-2.16 6.5-5.62 2.192c-.287.112-.477.39-.477.7s.19.585.478.698l5.62 2.192 2.16 6.5c.102.306.39.513.712.513s.61-.207.712-.513l2.16-6.5 5.62-2.192c.287-.112.477-.39.477-.7s-.19-.585-.478-.697zm-6.49 2.32c-.208.08-.37.25-.44.46l-1.56 4.695-1.56-4.693c-.07-.21-.23-.38-.438-.462l-4.155-1.62 4.154-1.622c.208-.08.37-.25.44-.462l1.56-4.693 1.56 4.694c.07.212.23.382.438.463l4.155 1.62-4.155 1.622zM6.663 3.812h-1.88V2.05c0-.414-.337-.75-.75-.75s-.75.336-.75.75v1.762H1.5c-.414 0-.75.336-.75.75s.336.75.75.75h1.782v1.762c0 .414.336.75.75.75s.75-.336.75-.75V5.312h1.88c.415 0 .75-.336.75-.75s-.335-.75-.75-.75zm2.535 15.622h-1.1v-1.016c0-.414-.335-.75-.75-.75s-.75.336-.75.75v1.016H5.57c-.414 0-.75.336-.75.75s.336.75.75.75H6.6v1.016c0 .414.335.75.75.75s.75-.336.75-.75v-1.016h1.098c.414 0 .75-.336.75-.75s-.336-.75-.75-.75z"
-              ></path>
+                d="M22.772 10.506l-5.618-2.192-2.16-6.5c-.102-.307-.39-.514-.712-.514s-.61.207-.712.513l-2.16 6.5-5.62 2.192c-.287.112-.477.39-.477.7s.19.585.478.698l5.62 2.192 2.16 6.5c.102.306.39.513.712.513s.61-.207.712-.513l2.16-6.5 5.62-2.192c.287-.112.477-.39.477-.7s-.19-.585-.478-.697zm-6.49 2.32c-.208.08-.37.25-.44.46l-1.56 4.695-1.56-4.693c-.07-.21-.23-.38-.438-.462l-4.155-1.62 4.154-1.622c.208-.08.37-.25.44-.462l1.56-4.693 1.56 4.694c.07.212.23.382.438.463l4.155 1.62-4.155 1.622zM6.663 3.812h-1.88V2.05c0-.414-.337-.75-.75-.75s-.75.336-.75.75v1.762H1.5c-.414 0-.75.336-.75.75s.336.75.75.75h1.782v1.762c0 .414.336.75.75.75s.75-.336.75-.75V5.312h1.88c.415 0 .75-.336.75-.75s-.335-.75-.75-.75zm2.535 15.622h-1.1v-1.016c0-.414-.335-.75-.75-.75s-.75.336-.75.75v1.016H5.57c-.414 0-.75.336-.75.75s.336.75.75.75H6.6v1.016c0 .414.335.75.75.75s.75-.336.75-.75v-1.016h1.098c.414 0 .75-.336.75-.75s-.336-.75-.75-.75z">
+              </path>
             </g>
           </svg>
         </div>
@@ -88,24 +72,14 @@
           </div>
           <div>
             <div class="d-flex">
-              <a
-                href="/user/mainProfile/<%= user.id %> "
-                class="mx-1"
-                style="text-decoration: none; color: black"
-                ><%= user.firstname %>
-                <span href="" style="text-decoration: none; color: rgb(112, 112, 112)"
-                  >@<%=user.username%></span
-                >
+              <a href="/user/mainProfile/<%= user.id %> " class="mx-1"
+                style="text-decoration: none; color: black"><%= user.firstname %>
+                <span href="" style="text-decoration: none; color: rgb(112, 112, 112)">@<%=user.username%></span>
               </a>
             </div>
             <form action="/user/tweet/<%= user.id%>" method="post">
-              <textarea
-                name="tweetContent"
-                id="tweetContent"
-                cols="50"
-                rows="2"
-                placeholder="¿Qué está pasando?"
-              ></textarea>
+              <textarea name="tweetContent" id="tweetContent" cols="50" rows="2"
+                placeholder="¿Qué está pasando?"></textarea>
               <div class="d-flex justify-content-between mt-2">
                 <div>
                   <button type="submit" class="btn btn-primary rounded-pill">Twittear</button>
@@ -119,34 +93,19 @@
         <div class="bg-light py-1 border">
           <div class="d-flex">
             <div>
-              <img
-                src="/img/<%= tweet.author.profileImg %>"
-                class="mx-1"
-                style="max-width: 40px"
-                alt=""
-              />
+              <img src="/img/<%= tweet.author.profileImg %>" class="mx-1" style="max-width: 40px" alt="" />
             </div>
             <div>
               <div class="d-flex">
                 <% if(tweet.author.id === user.id){ %>
-                <a
-                  href="/user/mainProfile/<%= tweet.author.id%>"
-                  class="mx-1"
-                  style="text-decoration: none; color: black"
-                  ><%= tweet.author.firstname%> <%= tweet.author.lastname%>
-                  <span style="text-decoration: none; color: rgb(112, 112, 112)"
-                    >@<%= tweet.author.username%></span
-                  >
+                <a href="/user/mainProfile/<%= tweet.author.id%>" class="mx-1"
+                  style="text-decoration: none; color: black"><%= tweet.author.firstname%> <%= tweet.author.lastname%>
+                  <span style="text-decoration: none; color: rgb(112, 112, 112)">@<%= tweet.author.username%></span>
                 </a>
                 <% } else{ %>
-                <a
-                  href="/user/profile/<%= tweet.author.id%>"
-                  class="mx-1"
-                  style="text-decoration: none; color: black"
-                  ><%= tweet.author.firstname%> <%= tweet.author.lastname%>
-                  <span style="text-decoration: none; color: rgb(112, 112, 112)"
-                    >@<%= tweet.author.username%></span
-                  >
+                <a href="/user/profile/<%= tweet.author.id%>" class="mx-1"
+                  style="text-decoration: none; color: black"><%= tweet.author.firstname%> <%= tweet.author.lastname%>
+                  <span style="text-decoration: none; color: rgb(112, 112, 112)">@<%= tweet.author.username%></span>
                 </a>
                 <% } %>
                 <p class="mx-1">
@@ -156,42 +115,22 @@
               <div><%= tweet.text%></div>
               <div class="d-flex justify-content-between mt-2">
                 <div class="d-flex align-items-center">
-                  <img
-                    src="/img/comment-regular.svg"
-                    class="me-1"
-                    style="height: 18px"
-                    alt="coment"
-                  />
+                  <img src="/img/comment-regular.svg" class="me-1" style="height: 18px" alt="coment" />
                   5
                 </div>
                 <div>
-                  <img
-                    src="/img/retweet-solid.svg"
-                    class="me-1"
-                    style="height: 18px"
-                    alt="coment"
-                  />
+                  <img src="/img/retweet-solid.svg" class="me-1" style="height: 18px" alt="coment" />
                 </div>
                 <div class="d-flex align-items-center">
                   <form action="/user/tweetLike/<%= tweet.id %>" method="post">
                     <button type="submit" class="btn bg-trasparent shadow-none">
-                      <img
-                        src="/img/heart-regular.svg"
-                        class="me-1"
-                        style="height: 18px"
-                        alt="coment"
-                      />
+                      <img src="/img/heart-regular.svg" class="me-1" style="height: 18px" alt="coment" />
                     </button>
                   </form>
                   <%= tweet.likes.length %>
                 </div>
                 <div>
-                  <img
-                    src="/img/arrow-up-from-bracket-solid.svg"
-                    class="me-1"
-                    style="height: 18px"
-                    alt="coment"
-                  />
+                  <img src="/img/arrow-up-from-bracket-solid.svg" class="me-1" style="height: 18px" alt="coment" />
                 </div>
               </div>
             </div>
@@ -199,20 +138,12 @@
         </div>
         <% } %>
       </div>
-      <div class="row d-flex flex-column" style="height: 100vh; width: 250px">
+      <div class="col-3 d-flex flex-column p-0" style="height: 100vh;">
         <div class="mt-1">
-          <input
-            type=""
-            class="form-control bor"
-            aria-describedby="passwordHelpBlock"
-            placeholder="Buscar en Twitter"
-            style="background-color: rgb(216, 214, 214)"
-          />
+          <input type="" class="form-control bor" aria-describedby="passwordHelpBlock" placeholder="Buscar en Twitter"
+            style="background-color: rgb(216, 214, 214)" />
         </div>
-        <div
-          class="d-flex flex-column mt-5 rounded"
-          style="background-color: rgb(216, 214, 214); width: 200px; margin: auto"
-        >
+        <div class="d-flex flex-column mt-5 rounded p-3" style="background-color: rgb(216, 214, 214);">
           <div class="py-4">Tendencias para ti</div>
 
           <div class="mb-2">
@@ -224,7 +155,31 @@
             <div style="color: grey">2.637 Tweets</div>
           </div>
         </div>
+
+        <div class="d-flex flex-column mt-5 rounded p-3" style="background-color: rgb(216, 214, 214);">
+          <div class="py-4">A quién seguir</div>
+          <%  for (const recoUser of recomendedUsers) { %>
+          <div class="row d-flex">
+            <div class="col-3 d-flex justify-content-center align-items-center">
+              <img src="/img/<%=recoUser.profileImg%> " alt="" style="width:50px;">
+            </div>
+            <div class="mb-2 col-5 pe-0">
+              <div class="fw-bold"><%=recoUser.firstname%> <%=recoUser.lastname%></div>
+              <div style="color: grey">@<%=recoUser.username%></div>
+            </div>
+            <form class="p-0 col d-flex justify-content-center align-items-center"
+              action="/user/profile/<%=recoUser.id%>" method="post">
+              <button class="btn btn-dark " type="submit"> <% if(user.following.includes(recoUser.id)){ %> Following
+                <% } else{ %> Follow <% } %></button>
+            </form>
+          </div>
+          <br>
+
+          <%} %>
+        </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
