--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <!-- <a href="/login" class="btn btn-primary">Log In</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <!-- <a href="/login" class="btn btn-primary">Log In</a>
         <br /><br />
         <a href="/register" class="btn btn-success">Register</a> -->
-        <div class="col">
-          <h2>Login</h2>
-          <form action="/login" method="post">
-            <label for="emailOrUsername"> Email or Username </label>
-            <input type="text" name="emailOrUsername" class="form-control" id="emailOrUsername" />
-            <br /><br />
-            <label for="password"> Password </label>
-            <input type="password" name="password" class="form-control" id="password" />
-            <br /><br />
-            <button type="submit" class="btn btn-primary" name="login">Log In</button>
-          </form>
-        </div>
-        <div class="col">
-          <h2>Register</h2>
-          <form action="/users" method="post">
-            <label for="firstname"> Firstname </label>
-            <input type="text" name="firstname" class="form-control" id="firstname" />
-            <br /><br />
-            <label for="lastname"> Lastname </label>
-            <input type="text" name="lastname" class="form-control" id="lastname" />
-            <br /><br />
-            <label for="username"> Username </label>
-            <input type="text" name="username" class="form-control" id="username" />
-            <br /><br />
-            <label for="email"> Email </label>
-            <input type="text" name="email" class="form-control" id="email" />
-            <br /><br />
-            <label for="password"> Password </label>
-            <input type="password" name="password" class="form-control" id="password" />
-            <br /><br />
-            <button type="submit" class="btn btn-success" name="register">Register</button>
-          </form>
-        </div>
+      <div class="col">
+        <h2>Login</h2>
+        <form action="/login" method="post">
+          <label for="emailOrUsername"> Email or Username </label>
+          <input type="text" name="emailOrUsername" class="form-control" id="emailOrUsername" />
+          <br /><br />
+          <label for="password"> Password </label>
+          <input type="password" name="password" class="form-control" id="password" />
+          <br /><br />
+          <button type="submit" class="btn btn-primary" name="login">Log In</button>
+        </form>
       </div>
+      <div class="col">
+        <h2>Register</h2>
+        <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Launch demo modal
+        </button>
+        <div class="modal modal-dialog fade modal-dialog-centered" id="staticBackdrop" data-bs-backdrop="static"
+          data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true"> -->
+        <form action="/users" method="post">
+          <label for="firstname"> Firstname </label>
+          <input type="text" name="firstname" class="form-control" id="firstname" />
+          <br /><br />
+          <label for="lastname"> Lastname </label>
+          <input type="text" name="lastname" class="form-control" id="lastname" />
+          <br /><br />
+          <label for="username"> Username </label>
+          <input type="text" name="username" class="form-control" id="username" />
+          <br /><br />
+          <label for="email"> Email </label>
+          <input type="text" name="email" class="form-control" id="email" />
+          <br /><br />
+          <label for="password"> Password </label>
+          <input type="password" name="password" class="form-control" id="password" />
+          <br /><br />
+          <button type="submit" class="btn btn-success" name="register">Register</button>
+        </form>
+        <!-- </div> -->
       </div>
     </div>
-  </body>
+  </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
