--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,7 @@
 
 /* ///////////////////////////////////////// WELCOME ////////////////////////////////////////////////*/
 body {
-  background-image: url("../img/welcomeWallpaper.png");
+  background-image: url("../img/welcomeWallpaperLight.png");
 }
 
 .container {
@@ -30,6 +30,7 @@ body {
   object-fit: contain;
   max-width: 400px;
   max-height: 400px;
+  filter: brightness(0) invert(1);
 }
 
 #welcomeModals {
@@ -38,18 +39,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
 }
 
 .welcomeTitle {
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 3.5rem;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 /* ----------------------------------------- MODALS -------------------------------------------------*/
 .loginModal {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   max-width: 35%;
   color: white;
 }
@@ -75,7 +76,7 @@ body {
 }
 
 .registerModal {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   max-width: 35%;
   color: white;
 }
