--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -19,12 +19,12 @@
       <br><br>
       <form action="/login" method="post">
         <div class="form-floating">
-          <input type="text" name="emailOrUsername" class="form-control text-white bg-transparent" id="emailOrUsername" placeholder="email"/>
+          <input type="text" name="emailOrUsername" class="form-control bg-transparent" id="emailOrUsername" placeholder="email"/>
           <label for="emailOrUsername" class="registerLabels"> Email or Username </label>
           <br /><br />
         </div>
         <div class="form-floating">
-          <input type="password" name="password" class="form-control text-white bg-transparent" id="password" placeholder="password"/>
+          <input type="password" name="password" class="form-control bg-transparent" id="password" placeholder="password"/>
           <label for="password" class="registerLabels"> Password </label>
           <br /><br />
         </div>
@@ -40,27 +40,27 @@
       <br><br>
       <form action="/users" method="post" >
         <div class="form-floating">
-          <input type="text" name="firstname" class="form-control text-white bg-transparent" placeholder="firstname" id="firstname" />
+          <input type="text" name="firstname" class="form-control bg-transparent" placeholder="firstname" id="firstname" />
           <label for="firstname" class="registerLabels"> Firstname </label>
           <br /><br />
         </div>
         <div class="form-floating">
-          <input type="text" name="lastname" class="form-control text-white bg-transparent" placeholder="lastname" id="lastname" />
+          <input type="text" name="lastname" class="form-control bg-transparent" placeholder="lastname" id="lastname" />
           <label for="lastname" class="registerLabels"> Lastname </label>
           <br /><br />
         </div>
         <div class="form-floating">
-          <input type="text" name="username" class="form-control text-white bg-transparent" placeholder="username" id="username" />
+          <input type="text" name="username" class="form-control bg-transparent" placeholder="username" id="username" />
           <label for="username" class="registerLabels"> Username </label>
           <br /><br />
         </div>
         <div class="form-floating">
-          <input type="text" name="email" class="form-control text-white bg-transparent" placeholder="email" id="email" />
+          <input type="text" name="email" class="form-control bg-transparent" placeholder="email" id="email" />
           <label for="email" class="registerLabels"> Email </label>
           <br /><br />
         </div>
         <div class="form-floating">
-          <input type="password" name="password" class="form-control text-white bg-transparent" placeholder="password" id="password" />
+          <input type="password" name="password" class="form-control bg-transparent" placeholder="password" id="password" />
           <label for="password" class="registerLabels"> Password </label>
           <br /><br />
         </div>
@@ -81,12 +81,12 @@
         <div>
           <h1 class="welcomeTitle fw-bold">Lo que está pasando ahora</h1>
         </div>
-        <h3 class="text-white">Unete a Twitter hoy mismo.</h3>
+        <h3>Unete a Twitter hoy mismo.</h3>
         <button class="btn btn-primary rounded-pill px-5 border border-primary border-4 fw-bold" id="buttonRegisterModal">Registrate Gratis</button>
         <br><br>
         
-        <h3 class="text-white">¿Ya tienes una cuenta?</h3>
-        <button class="btn btn-primary-70 rounded-pill px-5 border border-primary border-4 fw-bold text-white" id="buttonLoginModal">Ingresar</button>
+        <h3>¿Ya tienes una cuenta?</h3>
+        <button class="btn btn-primary-70 rounded-pill px-5 border border-primary border-4 fw-bold" id="buttonLoginModal">Ingresar</button>
       </div>
     </div>
   </div>
