--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,45 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/b9d6617411.js" crossorigin="anonymous"></script>
     <title>Document</title>
   </head>
+
   <body>
     <div class="col-3 d-flex flex-column justify-content-between" style="height: 100vh">
       <div class="col">
         <ul style="list-style: none">
           <li>
-            <a href=""
+            <a href="/"
               ><img src="/img/logo.png" class="mt-2 mb-4" style="max-width: 50px" alt="logoTwitter"
             /></a>
           </li>
           <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">Explorar</a>
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">Notificaciones</a>
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">Mensajes</a>
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">Guardados</a>
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">Listas</a>
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>"
-              >Perfil</a
+            <a style="text-decoration: none; color: black" href="/"
+              ><img src="/img/twiter-icon-17.jpg" style="width: 30px" alt="" /> Inicio</a
             >
           </li>
           <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">Más opciones</a>
+            <a style="text-decoration: none; color: black" href="/enConstruccion"
+              ><i class="fa-regular fa-hashtag"></i> Explorar</a
+            >
+          </li>
+          <li class="my-2 fs-4">
+            <a style="text-decoration: none; color: black" href="/enConstruccion"
+              ><i class="fa-regular fa-bell"></i> Notificaciones</a
+            >
+          </li>
+          <li class="my-2 fs-4">
+            <a style="text-decoration: none; color: black" href="/enConstruccion"
+              ><i class="fa-regular fa-envelope"></i> Mensajes</a
+            >
+          </li>
+          <li class="my-2 fs-4">
+            <a style="text-decoration: none; color: black" href="/enConstruccion">
+              <i class="fa-regular fa-bookmark"></i> Guardados</a
+            >
+          </li>
+          <li class="my-2 fs-4">
+            <a style="text-decoration: none; color: black" href="/enConstruccion">
+              <i class="fa-light fa-bars"></i> Listas</a
+            >
+          </li>
+          <li class="my-2 fs-4">
+            <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>"></a>
+              <i class="fa-regular fa-user"></i> Perfil</a
+            >
+          </li>
+          <li class="my-2 fs-4">
+            <a style="text-decoration: none; color: black" href="/enConstruccion"> <i class="fa-light fa-ellipsis"></i> Más opciones</a>
           </li>
           <li class="my-4">
             <a
               style="text-decoration: none; color: black"
               href=""
-              class="btn btn-primary rounded-pill btn-lg"
+              class="btn btn-primary rounded-pill btn-lg d-block text-white"
               >Twittear</a
             >
           </li>
