--- a/views/mainProfile.ejs
+++ b/views/mainProfile.ejs
@@ -1,21 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <%= user.firstname %> <%= user.lastname %> - <%= user.username %>
-    <br /><br />
-    <%= user.description %> <% for(let i = 0; i < tweets.length; i++) {%> <%= tweets[i].text %>
-    <form action="/user/mainProfile/<%= tweets[i].id %>?_method=DELETE " method="post">
-      <button type="submit">Borrar</button>
-    </form>
-    <% } %>
-    <a href="/user/mainProfile/<%= user.id %>/followers">Followers</a>
-    <a href="/user/mainProfile/<%= user.id %>/following">Following</a>
-    <a href="/user/mainProfile/<%= user.id %>/edit">Edit Profile</a>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Perfil/Twitter</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/85d4ade37a.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/stylesMainProfile.css" type="text/css">
+  <link rel="stylesheet" href="/css/editProfileStyles.css" type="text/css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="row d-flex mt-1 justify-content-between">
+      <%- include("partials/navbar") %>
+      <div class="col-6">
+        <div class="d-flex ">
+          <div class="d-flex justify-content-center align-items-center me-4"><a href="/"><img
+                src="/img/arrow-left-solid.svg" alt="arrowBack" style="width:20px ;"></a></i></div>
+          <div class="d-flex flex-column mb-2">
+            <div class=" fw-bold"><%= user.firstname %> <%= user.lastname %></div>
+            <div class=""> @<%= user.username %></div>
+          </div>
+        </div>
+        <div class="position-relative">
+          <div style="background-image: url('/img/fondoPerfil.jpg'); width: 100%; height: 300px; "></div>
+          <div class="px-2">
+            <div class="d-flex justify-content-between align-items-center mx-2 position-relative">
+              <div class="position-relative rounded-circle p-1 bg-light" style="top:-50px">
+                <img src="/img/<%= user.profileImg %>" class="profileImg mx-1 rounded-circle"
+                  style="width: 100px; height: 100px;" alt=" profileImg" />
+              </div>
+              <div class="">
+                <button class="modalBtn btn btn-outline-secondary rounded-pill">Editar
+                  perfil</button>
+              </div>
+            </div>
+            <div class="d-flex flex-column">
+              <div class=" fw-bold"><%= user.firstname %> <%= user.lastname %></div>
+              <div class=""> @<%= user.username %></div>
+            </div>
+            <div class="mt-3">
+              <%= user.description %>
+            </div>
+            <div class="d-flex mt-2">
+              <div class="me-3"><a href="/user/mainProfile/<%= user.id %>/following"
+                  class="text-decoration-none text-secondary">
+                  <span class="fw-bold text-dark">
+                    <%=user.following.length%>
+                  </span>
+                  Siguiendo</a></div>
+              <div class="me-3"><a href="/user/mainProfile/<%= user.id %>/followers"
+                  class="text-decoration-none text-secondary">
+                  <span class="fw-bold text-dark">
+                    <%=user.followers.length%>
+                  </span>
+                  Seguidores</a></div>
+            </div>
+          </div>
+        </div>
+        <br /><br />
+        <% for ( const tweet of tweets) {%>
+        <div class="bg-light py-1 border">
+          <div class="d-flex justify-content-between">
+            <div class="col-1">
+              <img src="/img/<%= user.profileImg %>" class="mx-1" style="max-width: 40px" alt="" />
+            </div>
+            <div class="col-10">
+              <div class="d-flex">
+                <a href="/user/mainProfile/<%= user.id%>" class="mx-1"
+                  style="text-decoration: none; color: black"><%= user.firstname%> <%= user.lastname%>
+                  <span style="text-decoration: none; color: rgb(112, 112, 112)">@<%= user.username%></span>
+                </a>
+                <p class="mx-1">
+                  - <%= formatDistanceToNow( tweet.createdAt, {includeSeconds: true} ) %>
+                </p>
+              </div>
+              <div><%= tweet.text%></div>
+              <div class="d-flex justify-content-between mt-2">
+                <div class="d-flex align-items-center">
+                  <img src="/img/comment-regular.svg" class="me-1" style="height: 18px" alt="coment" />
+                  5
+                </div>
+                <div>
+                  <img src="/img/retweet-solid.svg" class="me-1" style="height: 18px" alt="coment" />
+                </div>
+                <div class="d-flex align-items-center">
+                  <form action="/user/tweetLike/<%= tweet.id %>" method="post">
+                    <button type="submit" class="btn bg-trasparent shadow-none">
+                      <img src="/img/heart-regular.svg" class="me-1" style="height: 18px" alt="coment" />
+                    </button>
+                  </form>
+                  <%= tweet.likes.length %>
+                </div>
+                <div>
+                  <img src="/img/arrow-up-from-bracket-solid.svg" class="me-1" style="height: 18px" alt="coment" />
+                </div>
+              </div>
+            </div>
+            <div class="col-1">
+              <form action="/user/mainProfile/<%=tweet.id%>?_method=DELETE " method="post">
+                <button type="submit" class="border-0"><img src="/img/delete.svg" style="width:20px ;"
+                    alt="delete"></button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <% } %>
+      </div>
+      <%- include("partials/footer") %>
+    </div>
+  </div>
+  <div class="editModalBg">
+    <div class="editModal p-3 border border-1 shadow rounded-3">
+      <button class="editModalCloseBtn btn btn-secondary">Close</button>
+      <br />
+      <form action="/user/mainProfile/<%= user.id %>/edit?_method=PATCH" method="post" enctype="multipart/form-data">
+        <button type="submit" class="btn btn-primary float-end">Submit Changes</button>
+        <br />
+        <div>
+          <img src="/img/<%= user.profileImg %> " alt="" width="50px" />
+          <label for="profileImg">Profile Img</label>
+          <input type="file" name="profileImg" value="<%= user.profileImg %>/>
+          <br />
+        </div>
+        <br />
+        <div class=" form-floating">
+          <input class="form-control text-secondary bg-white" type="text" name="firstname" value="<%= user.firstname %>"
+            placeholder="firstname" />
+          <label class="editLabels" for="firstname">Firstname</label>
+          <br />
+        </div>
+        <div class="form-floating">
+          <input class="form-control text-secondary bg-white" type="text" name="lastname" value="<%= user.lastname %>"
+            placeholder="lastname" />
+          <label class="editLabels" for="lastname">Lastname</label>
+          <br />
+        </div>
+        <div class="form-floating">
+          <input class="form-control text-secondary bg-white" type="text" name="username" value="<%= user.username %>"
+            placeholder="username" />
+          <label class="editLabels" for="username">Username</label>
+          <br />
+        </div>
+        <div class="form-floating">
+          <input class="form-control text-secondary bg-white" type="text" name="description"
+            value="<%= user.description %>" placeholder="email" />
+          <label class="editLabels" for="description">Description</label>
+        </div>
+      </form>
+    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
+  <script src="/js/editProfileApp.js"></script>
+</body>
+
 </html>
