--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -48,7 +48,7 @@
             >
           </li>
           <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>"></a>
+            <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>">
               <i class="fa-regular fa-user"></i> Perfil</a
             >
           </li>
@@ -60,7 +60,7 @@
               style="text-decoration: none; color: black"
               href=""
               class="btn btn-primary rounded-pill btn-lg d-block text-white"
-              >Twittear</a
+              style="background-color:#1D9BF0 ;">Twittear</a
             >
           </li>
         </ul>
