cambios en views

--- a/views/mainProfile.ejs
+++ b/views/mainProfile.ejs
@@ -27,7 +27,7 @@
           </div>
         </div>
         <div class="position-relative">
-          <div style="background-image: url('/img/fondoPerfil.jpg'); width: 100%; height: 300px; "></div>
+          <div style="background-image: url('/img/fondoPerfil.jpg'); width: 100%; height: 200px; "></div>
           <div class="px-2">
             <div class="d-flex justify-content-between align-items-center mx-2 position-relative">
               <div class="position-relative rounded-circle p-1 bg-light" style="top:-50px">
@@ -67,7 +67,7 @@
         <div class="bg-light py-1 border">
           <div class="d-flex justify-content-between">
             <div class="col-1">
-              <img src="/img/<%= user.profileImg %>" class="mx-1" style="max-width: 40px" alt="" />
+              <img src="/img/<%= user.profileImg %>" class="mx-1 rounded-circle" style="max-width: 40px" alt="" />
             </div>
             <div class="col-10">
               <div class="d-flex">
@@ -101,7 +101,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-1">
+            <div class="col-1 d-flex justify-content-center">
               <form action="/user/mainProfile/<%=tweet.id%>?_method=DELETE " method="post">
                 <button type="submit" class="border-0"><img src="/img/delete.svg" style="width:20px ;"
                     alt="delete"></button>
