--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,75 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://kit.fontawesome.com/b9d6617411.js" crossorigin="anonymous"></script>
-    <title>Document</title>
-  </head>
 
-  <body>
-    <div class="col-3 d-flex flex-column justify-content-between" style="height: 100vh">
-      <div class="col">
-        <ul style="list-style: none">
-          <li>
-            <a href="/"
-              ><img src="/img/logo.png" class="mt-2 mb-4" style="max-width: 50px" alt="logoTwitter"
-            /></a>
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/"
-              ><img src="/img/twiter-icon-17.jpg" style="width: 30px" alt="" /> Inicio</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion"
-              ><i class="fa-regular fa-hashtag"></i> Explorar</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion"
-              ><i class="fa-regular fa-bell"></i> Notificaciones</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion"
-              ><i class="fa-regular fa-envelope"></i> Mensajes</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">
-              <i class="fa-regular fa-bookmark"></i> Guardados</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion">
-              <i class="fa-light fa-bars"></i> Listas</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>"></a>
-              <i class="fa-regular fa-user"></i> Perfil</a
-            >
-          </li>
-          <li class="my-2 fs-4">
-            <a style="text-decoration: none; color: black" href="/enConstruccion"> <i class="fa-light fa-ellipsis"></i> Más opciones</a>
-          </li>
-          <li class="my-4">
-            <a
-              style="text-decoration: none; color: black"
-              href=""
-              class="btn btn-primary rounded-pill btn-lg d-block text-white"
-              >Twittear</a
-            >
-          </li>
-        </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/b9d6617411.js" crossorigin="anonymous"></script>
+  <title>Document</title>
+</head>
+
+<body>
+  <div class="col-3 d-flex flex-column justify-content-between" style="height: 100vh">
+    <div class="col">
+      <ul style="list-style: none">
+        <li>
+          <a href="/"><img src="/img/logo.png" class="mt-2 mb-4" style="max-width: 50px" alt="logoTwitter" /></a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/">
+            <div class="d-flex align-items-center">
+              <div class="" style="width: 40px; height: 40px;"><img src="/img/twiter-icon-17.jpg" style="width: 100%"
+                  alt="" /></div>
+              <div><span class="px-3">Inicio</span></div>
+            </div>
+          </a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/enConstruccion">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;"><i
+                  class="fa-regular fa-hashtag fa-xl"></i>
+              </div>
+              <div><span class="px-3">Explorar</span></div>
+            </div>
+          </a>
+        </li>
+
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/enConstruccion">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;"><i
+                  class="fa-regular fa-bell"></i>
+              </div>
+              <div><span class="px-3">Notificaciones</span></div>
+            </div>
+          </a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/enConstruccion">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;"><i
+                  class="fa-regular fa-envelope"></i>
+              </div>
+              <div><span class="px-3">Mensajes</span></div>
+            </div>
+          </a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/enConstruccion">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;"><i
+                  class="fa-regular fa-bookmark"></i>
+              </div>
+              <div><span class="px-3">Guardados</span></div>
+            </div>
+          </a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/enConstruccion">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;"><i
+                  class="fa-solid fa-bars"></i>
+              </div>
+              <div><span class="px-3">Listas</span></div>
+            </div>
+          </a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;"><i
+                  class="fa-regular fa-user"></i>
+              </div>
+              <div><span class="px-3">Perfil</span></div>
+            </div>
+          </a>
+        </li>
+        <li class="my-2 fs-4">
+          <a style="text-decoration: none; color: black" href="/user/mainProfile/<%=user.id%>">
+            <div class="d-flex align-items-center">
+              <div class="d-flex align-items-center justify-content-center pt-1" style="width: 40px; height: 40px;">
+                <img src="/img/more.png" style="width: 70%" alt="" />
+              </div>
+              <div><span class="px-3">Más opciones</span></div>
+            </div>
+          </a>
+        </li>
+
+        <li class="my-4 pe-3">
+          <a style="text-decoration: none; color: black" href=""
+            class="btn btn-primary rounded-pill btn-lg d-block text-white">Twittear</a>
+        </li>
+      </ul>
+    </div>
+    <div class="col-1 d-flex justify-content-between" style="width:80% ;">
+      <div>
+        <img src="/img/<%= user.profileImg %>" class="mx-1 rounded-circle" style="max-width: 40px" alt="" />
       </div>
-      <div class="col-1">
+      <div class="d-flex flex-column">
+        <div>
+          <%=user.firstname %>
+        </div>
+        <div>
+          @<%=user.username %>
+        </div>
+      </div>
+      <div>
         <form action="/user/?_method=DELETE" method="post">
           <button type="submit" class="btn btn-primary">Logout</button>
         </form>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
